# Calcora

./: .gitignore  BUILD.md  CHANGELOG.md  CHECKSUMS.txt  CITATION.cff  CLONE_AND_RUN.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  DEPLOYMENT.md  DESKTOP_GUIDE.md  DISTRIBUTION.md  Design Document  ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  INTEGRATION_VERIFICATION.md  LICENSE  NETLIFY_DEPLOY.md  PROJECT_REVIEW.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.md  ROADMAP.md  SELF_HOSTING.md  SEO_GUIDE.md  STATUS.md  UI_IMPROVEMENTS.md  VERIFICATION_REPORT.md  analyze_contrast_v2.py  analyze_lighthouse.py  api_server.py  build-desktop.ps1  build.ps1  calcora-cli.spec  calcora-desktop.spec  calcora-server.spec  calcora_desktop.py  calcora_test.out  check_lighthouse_v2.py  demo_integration_features.py  (+15 more)
.github/workflows/: build-binaries.yml  build-desktop.yml  publish-pypi.yml  tests.yml
archive/: ARCHITECTURE_VERIFICATION_v0.2.md  RELEASE_SUMMARY_v0.2.0.md  benchmark_results.txt  demo-backup.html  index-backup.html  lighthouse-accessibility-v2.json  lighthouse-accessibility-v3.json  test_enhanced_integration.py  test_integration_api.py  test_integration_api_enhanced.py
benchmarks/: README.md  results_2026-02-22.txt  results_2026-02-24_post_timeout.txt  validate_integration.py
docs/: ARCHITECTURE.md  CODE_SIGNING_GUIDE.md  CODING_STANDARDS.md  PEDAGOGICAL_FRAMEWORK.md  PILOT_STUDY_REPORT.md  PLUGINS.md  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md
docs/ADR/: ADR-001-separate-integration-engine.md  ADR-002-sympy-as-backend.md  README.md  (+1 more)
scripts/: generate_icon.py  measure_startup.ps1
site/: .gitignore  README.md  astro.config.mjs  demo-v2.html  demo.html  docs-api.html  docs-building.html  docs-self-hosting.html  docs-user-guide.html  index-v2.html  index.html  modern-theme.css  package-lock.json  package.json  robots.txt  sitemap.xml  style.css  ui-enhancements.js
tests/: test_differentiate_decomposed.py  test_latex_renderer.py  test_malformed_input.py  test_more_rules.py  test_step_graph_validation.py  test_timeout.py
(+60 files in other folders)
